# aligned_layer

./: Makefile  go.mod  go.sum
batcher/aligned-batcher/: Cargo.toml
batcher/aligned-batcher/src/: lib.rs
batcher/aligned-batcher/src/cairo_vm/: mod.rs
batcher/aligned-batcher/src/zk_utils/: mod.rs
batcher/aligned-sdk/src/: types.rs
batcher/aligned/src/: main.rs
config-files/: config.yaml
operator/cairo_vm/: cairo_vm.go
operator/cairo_vm/lib/: Cargo.toml  cairo_vm.h
operator/cairo_vm/lib/src/: lib.rs
operator/halo2ipa/lib/: libhalo2ipa_verifier.dylib
operator/pkg/: operator.go
scripts/test_files/cairo_vm/fibonacci_proof_generator/: cairo0_fibonacci.json
